--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   animated_text_kit: ^4.2.2
   mask_text_input_formatter: ^2.4.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
